<resources>
    <string name="app_name">Footprint</string>
    <string name="title_activity_login">Footprint Login</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_sign_up">Footprint Sign Up</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="fullname">Full Name</string>
    <string name="re_enter_password">Re-enter Password</string>
    <string name="email">Email</string>
    <string name="mobile">Mobile</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_in">Login</string>
    <string name="title_activity_add_place">Footprint Add Place</string>
    <string name="title_activity_add_post">Footprint Add Post</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="save_button_text">Save</string>
    <string name="cancel_button_text">Cancel</string>
    <string name="title_label_text">Title</string>
    <string name="description_label_text">Description</string>
    <string name="category_label_text">Category</string>
    <string name="location_label_text">Location</string>
    <string-array name="category_array">
        <item>Food</item>
        <item>Outdoor Activity</item>
        <item>Shopping</item>
        <item>Religious</item>
        <item>Tourist Spot</item>
        <item>Cultural</item>
        <item>Night Life</item>
    </string-array>
    <string name="title_activity_main">Footprint</string>
    <string name="add_place_button_text">Add Place</string>
    <string name="logout_button_text">Logout</string>
    <string name="title_activity_feed">Footprint</string>
    <string name="signing_in">Signing In</string>
    <string name="title_activity_add_event">Footprint Add Event</string>
    <string name="title_activity_view_place_profile">Footprint Place</string>
    <string name="title_activity_view_user_profile">Footprint Profile</string>
    <string name="title_activity_app_settings">Footprint Settings</string>
    <string name="name_label_text">Name</string>
    <string name="change_password_button_text">Change Password</string>
    <string name="title_activity_spot_place">Map</string>
    <string name="map_button_text">Map</string>
    <string name="locate_button_text">Locate</string>
    <string name="repeat_weekly_switch_text">Repeat Weekly</string>
    <string name="add_event_button_text">Add Event</string>
    <string name="feed_button_text">Feed</string>
    <string name="event_date_label_text">Event Date</string>
    <string name="start_date_lable_text">Start Date</string>
    <string name="end_date_label_text">End Date</string>
    <string name="start_time_label_text">Start Time</string>
    <string name="end_time_label_text">End Time</string>
    <string name="add_event_menu_item_label_text">Add Event</string>
    <string name="add_place_menu_item_lable_text">Add Place</string>
    <string name="logout_menu_item_label_text">Logout</string>
    <string name="title_activity_view_event">Footprint Event</string>
    <string name="get_directions_label_text">Get Directions</string>
    <string name="check_in_button_text">Check In</string>
    <string name="get_directions_button_text">Get Directions</string>
    <string name="address_label_text">Address</string>
    <string name="Cancel">Cancel</string>
    <string name="gps_network_not_enabled">Location services are not enabled. Please enable Location Services.</string>
    <string name="open_location_settings">Turn On Location Services</string>
    <string name="title_activity_launch">LaunchActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="invalid_email">This email address is invalid</string>
    <string name="invalid_password">Password is too short</string>
    <string name="incorrect_password">Password is incorrect</string>
    <string name="field_required">This field is required</string>
    <string name="title_activity_check_in">CheckInActivity</string>
    <string name="label_stories">Stories</string>
    <string name="title_activity_view_story">ViewStoryActivity</string>

</resources>
