<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.sacri.footprint_v3.activities.FeedActivity">
    <item android:id="@+id/mnAddEvent" android:title="@string/add_event_menu_item_label_text"
        android:orderInCategory="1" app:showAsAction="never" />
    <item android:id="@+id/mnAddPlace" android:title="@string/add_place_menu_item_lable_text"
        android:orderInCategory="2" app:showAsAction="never" />
    <item android:id="@+id/mnLogout" android:title="@string/logout_menu_item_label_text"
        android:orderInCategory="3" app:showAsAction="never" />
    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="4" app:showAsAction="never" />
</menu>
